modules/gdscript/tests/scripts/analyzer/errors/access_level_private_func_subclass_using_super.gd
@private

class Foo:
    func foo():
        pass

class Bar extends Foo:
    func bar():
        super.foo()

func test():
    pass
